--- a/dev-plugins/bootstrapless/intranet/default/meran.less
+++ b/dev-plugins/bootstrapless/intranet/default/meran.less
@@ -67,5 +67,8 @@
 // El responsive
 @import "../../responsive.less";
 
-//El propio local
+//El propio general
+@import "../general.less";
+
+//El propio local del tema
 @import "propio.less";
