--- a/intranet/htdocs/intranet-tmpl/admin/logos_ajax_ui.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/logos_ajax_ui.tmpl
@@ -1,32 +1,6 @@
 [% USE HTML %]
 
 <script type="text/javascript">
-    function agregarPortada_showUI(){
-        $('#agregarLogoUI').modal();
-    } 
-      
-    function submitFormUI(){
-        $('#agregarLogoUI').modal('hide');
-        startOverlay();
-        $('#agregarLogoUIForm').submit();
-    }
-    
-    function modificarLogo(id){
-	    objAH                   = new AjaxHelper(updateModificarLogo);
-	    objAH.showOverlay       = true;
-	    objAH.url               = URL_PREFIX+'/admin/logosDB.pl';
-	    objAH.idLogo            = id;
-	    objAH.tipoAccion        = 'SHOW_MOD_LOGO_UI';
-	    objAH.sendToServer();
-	}
-	
-	function updateModificarLogo(responseText){
-	    if (!verificarRespuesta(responseText))
-            return(0);
-        $('#agregarLogoUI').html(responseText);
-        $('#agregarLogoUI').modal();
-	}
-    
     $(document).ready(function() {
         $('.fancy_link').fancybox();
     });
@@ -34,7 +8,7 @@
 
 <fieldset>
     <legend>[% "Listado de Logos de la UI" | i18n %]:</legend>
-        [% IF logos %]
+
             <div class="datos_tabla_div_user">
                 
                     [% PERL %]
@@ -49,6 +23,17 @@
                     [% END %]
 
                     <tbody>
+                        <tr>
+                            <td class="userImage">
+                              <a class="fancy_link" href="http://[% SERVER_ADDRESS %][% opac_htdocs %]/[% user_theme %]/imagenes/logo_ui_opac_menu.png">
+                                <img border="0" src="http://[% SERVER_ADDRESS %][% opac_htdocs %]/[% user_theme %]/imagenes/logo_ui_opac_menu.png" alt="logo_ui_opac_menu.png" >
+                              </a>
+                            </td>
+                            <td>
+                                Logo Meran
+                            </td>
+                            <td></td>
+                        </tr>
                         [% FOREACH logo IN logos %]
                             <tr>
                                 <td class="userImage">
@@ -78,9 +63,6 @@
                     </tbody>
                 </table>
             </div>
-        [% ELSE %]
-            <div class="alert alert-info">[% 'No hay logos que listar' | i18n %]</div>
-        [% END %]
 </fieldset>
 
 <div class="form-actions">	                
