--- a/dev-plugins/bootstrapless/intranet/general.less
+++ b/dev-plugins/bootstrapless/intranet/general.less
@@ -3,3 +3,19 @@
     margin-right: 4px;
     width: 90px;
 } 
+
+#seleccionados{
+    padding-left: 50px;
+} 
+
+.subnav-fixed {
+    border-color: #D5D5D5;
+    border-radius: 0 0 0 0;
+    border-width: 0 0 1px;
+    box-shadow: 0 1px 0 #FFFFFF inset, 0 1px 5px rgba(0, 0, 0, 0.1);
+    left: 0;
+    position: fixed;
+    right: 0;
+    top: 40px;
+    z-index: 1020;
+}
