mensaje automatico generado para el sql.rev269

--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_registros_importacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_registros_importacion.tmpl
@@ -140,7 +140,7 @@ function cambiarFiltro (filtro){
                       </td>
 
                       <!--  BOTONES ACCIONES (Editar, Borrar, Ver detalle) -->
-                      <td>
+                      <td style="width: 100px;">
 							   [% IF detalle_importacion.getEstado != "IGNORADO" %]
 							   	   [% IF detalle_importacion.getMatching %]
 	                                 [% PERL %]
