ABM ayudas MARC

--- a/dev-plugins/bootstrapless/intranet/default/propio.less
+++ b/dev-plugins/bootstrapless/intranet/default/propio.less
@@ -412,6 +412,11 @@ body {
     width: 50px;
 }
 
+.logoImage img {
+    max-height: 50px;
+    max-width: 500px;
+}
+
 .table-striped tbody tr:nth-child(odd) td.marked,.table-striped tbody tr:nth-child(odd) th.marked{
     background-color: #DFF0E8;
 
