--- a/intranet/htdocs/intranet-tmpl/admin/logos_ajax.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/logos_ajax.tmpl
@@ -25,7 +25,7 @@
                     <tbody>
                         [% FOREACH logo IN logos %]
                             <tr>
-                                <td class="userImage">
+                                <td class="logoImage">
                                     <a class="fancy_link" href="https://[% SERVER_ADDRESS %]/private-uploads/logos/[% logo.getImagenPath %]">
                                           <img border="0" src="https://[% SERVER_ADDRESS %]/private-uploads/logos/[% logo.getImagenPath %]" alt="[% logo.getNombre %]" >
 				                    </a>
