--- a/intranet/htdocs/intranet-tmpl/admin/logos_ajax_ui.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/logos_ajax_ui.tmpl
@@ -24,7 +24,7 @@
 
                     <tbody>
                         <tr>
-                            <td class="userImage">
+                            <td class="logoImage">
                               <a class="fancy_link" href="http://[% SERVER_ADDRESS %][% opac_htdocs %]/[% user_theme %]/imagenes/logo_ui_opac_menu.png">
                                 <img border="0" src="http://[% SERVER_ADDRESS %][% opac_htdocs %]/[% user_theme %]/imagenes/logo_ui_opac_menu.png" alt="logo_ui_opac_menu.png" >
                               </a>
