--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleVisualizacionIntra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/detalleVisualizacionIntra.tmpl
@@ -25,8 +25,7 @@
 	            <div class="controls">
 	                <select name="campo" id="campo" onChange="eleccionCampo()">
 	                        <option value="-1">[% 'Seleccionar CampoX' | i18n %]</option>
-	                    </select>
-	                [% 'Nombre' | i18n %]: <strong><span id="nombre_campo"></span></strong>
+	                    </select><br />[% 'Nombre' | i18n %]: <strong><span id="nombre_campo"></span></strong>
 	            </div>
 	        </div>
 	        
