--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleVisualizacionOpac.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/detalleVisualizacionOpac.tmpl
@@ -26,7 +26,7 @@
 		                <select name="campo" id="campo" onChange="eleccionCampo()">
 		                        <option value="-1">[% 'Seleccionar CampoX' | i18n %]</option>
 		                    </select>
-		                [% 'Nombre' | i18n %]: <strong><span id="nombre_campo"></span></strong>
+		                    <br />[% 'Nombre' | i18n %]: <strong><span id="nombre_campo"></span></strong>
 		            </div>
 		        </div>
 		        
