--- a/intranet/htdocs/intranet-tmpl/admin/ver_mensaje.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/ver_mensaje.tmpl
@@ -45,6 +45,7 @@
         [% END %]
   </div>
   <h5>[% 'De' | i18n %]: [% HTML.escape(mensaje.getApellido) %], [% HTML.escape(mensaje.getNombre) %] ([% HTML.escape(mensaje.getEmail) %])</h5>
+  <h6>[% mensaje.getFecha %]</h6>
 </div>
 
 
