--- a/intranet/htdocs/intranet-tmpl/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/main.tmpl
@@ -42,8 +42,9 @@ var jobID = 0;
 
         
         mostrarNovedades();
-        mensajesContacto();
-
+        [% IF socio_data.usr_credential_type == "superLibrarian" %]
+          mensajesContacto();
+        [% END %]
         mensajes_interval_id = setInterval(mensajesContacto,20000);
         [% IF twitter_username_to_search %]
             $('#tweets').liveTwitter('[% twitter_username_to_search %]', {limit: 5, imageSize: 32}, function(){
@@ -69,25 +70,26 @@ var jobID = 0;
 
 <div id="mensajes_contacto" class="clear"></div>
 
-[% IF twitter_enabled %]
-	<div id="twitter_container" class="clear">
-	    <div id="twitter_result" class="alert alert-success" style="display:none;">
-	        
-	    </div>
-	    [% IF twitter_username_to_search %]
-		   <div id="tweets" class="tweets">
-		       <div class="loading">[% 'Cargando tweets...' | i18n %]</div>
-	       </div>
-		   <br />
-	    [% END %]
-	    <br />
-	    <a class="btn btn-inverse" onclick="showTwitter();" > 
-	        <i class="icon-white icon-retweet"></i> [% 'Twitter' | i18n %]
-	    </a>
-	    
-	</div>
+[% IF socio_data.usr_credential_type == "superLibrarian" %]
+  [% IF twitter_enabled %]
+  	<div id="twitter_container" class="clear">
+  	    <div id="twitter_result" class="alert alert-success" style="display:none;">
+  	        
+  	    </div>
+  	    [% IF twitter_username_to_search %]
+  		   <div id="tweets" class="tweets">
+  		       <div class="loading">[% 'Cargando tweets...' | i18n %]</div>
+  	       </div>
+  		   <br />
+  	    [% END %]
+  	    <br />
+  	    <a class="btn btn-inverse" onclick="showTwitter();" > 
+  	        <i class="icon-white icon-retweet"></i> [% 'Twitter' | i18n %]
+  	    </a>
+  	    
+  	</div>
+  [% END %]
 [% END %]
-
 [% INCLUDE 'partials/_percent_bar.inc' %]
 
 
