--- a/intranet/htdocs/intranet-tmpl/admin/circulacion/prestamos_vencidos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/circulacion/prestamos_vencidos.tmpl
@@ -4,15 +4,80 @@
 <script type="text/javascript" language="javascript">
 
     $(document).ready( function() {
-	    makeDataTable('#revisiones_pendientes');
+      makeDataTable('#prestamosVencidos');
+      checkedAll("prestamos_vencidos", "prestamo");
     });
     
+    var selected = new Array();
 
+    function enviarMailsATodos(){
+
+        objAH                   = new AjaxHelper(updateEnviarMailsATodos);
+        objAH.url               = URL_PREFIX+"/admin/circulacion/prestamos_vencidosDB.pl";
+        objAH.showOverlay       = true;
+        objAH.tipoAccion        = "ENVIAR_TODOS_MAILS_PRESTAMOS_VENCIDOS";
+        objAH.sendToServer();
+
+    }
+
+    function updateEnviarMailsATodos(responseText){
+
+        var Messages=JSONstring.toObject(responseText);
+        setMessages(Messages);
+
+    }
+    
+    function enviarMailsASeleccionados(){
+
+        objAH                   = new AjaxHelper(updateEnviarMailsASeleccionados);
+        objAH.url               = URL_PREFIX+"/admin/circulacion/prestamos_vencidosDB.pl";
+        objAH.showOverlay       = true;
+        objAH.tipoAccion        = "ENVIAR_A_SELECCION_MAILS_PRESTAMOS_VENCIDOS";
+        if(getSeleccionados()){
+            objAH.ids_prestamos     = selected;
+            objAH.sendToServer();
+        }
+
+    }
+
+    function updateEnviarMailsASeleccionados(responseText){
+
+        // limpia esta variable sino quedan prestamos viejos
+        selected = new Array();
+        var Messages=JSONstring.toObject(responseText);
+        setMessages(Messages);
+
+    }
+    
+    // devuelve los id de los prestamos seleccionados
+    function getSeleccionados(){
+    
+        var checkeds   = $("tr input[type='checkbox']:checked");
+
+        if (checkeds.length > 0){
+        
+            for(i = 0; i < checkeds.length; i++) {
+                selected.push(checkeds[i].id);
+            }
+            return true;
+        }else{
+            jAlert(POR_FAVOR_SELECCIONE_ALGUN_PRESTAMO);
+            return false;
+            
+        }   
+    }
+    
+    $(function() {
+      theTable = $("#prestamosVencidos");
+      $("#q").keyup(function() {
+      $.uiTableFilter(theTable, this.value);
+      });
+  });
 
 </script>
 
 <fieldset>
-    <legend class="titulo_legend">[% "Revisiones pendientes" | i18n %] </legend>
+    <legend class="titulo_legend">[% "Pr&eacute;stamos vencidos" | i18n %] </legend>
 
     <form class="well form-search" onsubmit="return false">
         <input class="placeholder" placeholder="Filtrar resultados" type="text" id="q" name="q">
@@ -21,7 +86,7 @@
  [% IF cantidad  %]
       [% PERL %]
                 print C4::AR::Filtros::tableHeader(   
-                                  id              => "revisiones_pendientes",
+                                  id              => "prestamosVencidos",
                                   class           => "",
                                   selectAll_id    => "prestamos_vencidos",
                                   columns         => ['[% "Apellido y nombre"|i18n %]','[% "N&uacute;mero de Socio"|i18n %]',
@@ -33,20 +98,20 @@
                                         ) ;
       [% END %]
 
-			<tbody>
-		      [% FOREACH prestamo IN prestamos %]
-		      	<tr>
-		      	    <td>
-		     		        <input type="checkbox" id="[% prestamo.getId_prestamo %]" name="prestamo" >
-				        </td>
-		      	    <td>
-		      	      [% TRY %]
-		                  [% prestamo.socio.persona.getApeYNom %]
-		              [% CATCH %]
-		                  [% 'Usuario inexistente' | i18n %]
-		              [% END %]
-				        </td>
-		      	    <td>
+      <tbody>
+          [% FOREACH prestamo IN prestamos %]
+            <tr>
+                <td>
+                <input type="checkbox" id="[% prestamo.getId_prestamo %]" name="prestamo" >
+            </td>
+                <td>
+                  [% TRY %]
+                      [% prestamo.socio.persona.getApeYNom %]
+                  [% CATCH %]
+                      [% 'Usuario inexistente' | i18n %]
+                  [% END %]
+            </td>
+                <td>
                       [% TRY %]
                         [% PERL %]
                             print C4::AR::Filtros::link_to(   text   => "[% prestamo.socio.getNro_socio %]",
@@ -59,25 +124,25 @@
                       [% CATCH %]
                           [% 'Usuario inexistente' | i18n %] ([% prestamo.nro_socio %])
                       [% END %]
-    				    </td>
-    				    <td>
-		          	    [% PERL %]
+            </td>
+            <td>
+                    [% PERL %]
                             print C4::AR::Filtros::link_to( text    => "[% prestamo.nivel3.codigo_barra %]",
                                                             url     => "[% url_prefix %]/catalogacion/estructura/detalleEjemplar.pl", 
                                                             params  => ["id3=[% prestamo.nivel3.getId3 %]"],
                                                             title   => "[% prestamo.nivel3.codigo_barra %]"
                                                         );
                         [% END %]
-				        </td>
-		          	<td>
-		                [% prestamo.tipo.getDescripcion %]
-				        </td>
-		          	<td>
-		          	    [% prestamo.getFecha_prestamo_formateada %]
-				        </td>
-		        </tr>
-		      [% END %]
-		     </tbody>
+            </td>
+                <td>
+                    [% prestamo.tipo.getDescripcion %]
+            </td>
+                <td>
+                    [% prestamo.getFecha_prestamo_formateada %]
+            </td>
+            </tr>
+          [% END %]
+         </tbody>
   </table>
   <div class="form-actions">
        [% PERL %]
