mensaje automatico generado para el sql.rev275

--- a/intranet/htdocs/intranet-tmpl/admin/revisiones_pendientes.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/revisiones_pendientes.tmpl
@@ -129,7 +129,7 @@
                     [% revision.nivel2.nivel1.getTitulo %]
                 </td>
                 <td>
-                    [% revision.nivel2.getEdicion %]
+                    [% IF revision.nivel2.getEdicion %] [% revision.nivel2.getEdicion %] [% ELSE %] ------ [% END %]
                 </td>
                 <td>
                     [% revision.getDate %]
