--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detallePrestamos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detallePrestamos.tmpl
@@ -34,7 +34,12 @@
                                 </td>
 
                                 <td>
-asdas
+                                [% PERL %]
+                                    print C4::AR::Filtros::link_to(	text => "[% HTML.escape(prestamo.nivel3.nivel1.getTitulo) %]",
+                                                            url=>"[% url_prefix %]/catalogacion/estructura/detalle.pl", 
+                                                            params =>	["id1=[% prestamo.nivel3.nivel1.getId1 %]"],
+                                                          ) ;
+                                [% END %]
                                 </td>
                                 <td>
                                 [% IF prestamo.nivel3.nivel1.getAutor %]
