--- a/opac/htdocs/opac-tmpl/opac-DetallePrestamos.tmpl
+++ b/opac/htdocs/opac-tmpl/opac-DetallePrestamos.tmpl
@@ -27,7 +27,7 @@
         <td> 
               [% IF prestamo.nivel3.nivel2.id1 %]
                   [% PERL %]
-                          print C4::AR::Filtros::link_to( text =>     "[% prestamo.nivel3.nivel2.nivel1.getTitulo %]",
+                          print C4::AR::Filtros::link_to( text =>     "[% HTML.escape(prestamo.nivel3.nivel2.nivel1.getTitulo) %]",
                                                           url =>      "[% url_prefix %]/opac-detail.pl", 
                                                           params => [ "id1=[% prestamo.nivel3.nivel2.id1 %]", ],
                                                       ) ;
@@ -38,7 +38,7 @@
               </td>
               <td class="autor_result click" onClick="filtrarPorAutor([% prestamos.nivel3.nivel2.nivel1.cat_autor.id %])" title="[% 'Filtrar por Autor' | i18n %]">
                   [% IF prestamo.nivel3.nivel1.getAutor %]
-                      [% prestamo.nivel3.nivel1.getAutor %]
+                      [% HTML.escape(prestamo.nivel3.nivel1.getAutor) %]
                   [% ELSE %]
                       &nbsp;
                   [% END %]
