--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
@@ -323,5 +323,7 @@ $(document).ready( function() {
 
 <div id="detalleMARC" class="modal hide fade"></div>
 
+<div id="ayudaMARC" class="modal hide fade"></div>
+
 [% INCLUDE "intranet-bottom.inc" %]
 
