checkall contenido estantes virtuales

--- a/intranet/htdocs/intranet-tmpl/estantes/subEstante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/subEstante.tmpl
@@ -1,4 +1,11 @@
-
+ <script>
+    
+//         $(document).ready(function(){
+//             checkedAll("div_contenido_[% estante.getId %]", "name_[% estante.getId %]");
+            
+//         });
+    
+ </script>
 <div id="contenido-[% estante.getId %]" class="accordion">
       <div class="accordion-group">
             <div class="accordion-heading">
