--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/agregarUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/agregarUsuario.tmpl
@@ -91,7 +91,7 @@
                 <label class="control-label" for="nro_documento">[% "Documento" | i18n %]*</label>    
                       <div class="controls">
                           [% combo_tipo_documento %] 
-                          <input  id="nro_documento" name="nro_documento" required class="input focused" type="text" value="[% socio_modificar.persona.getNro_documento %]">
+                          <input  id="nro_documento" name="nro_documento" required class="input focused" type="number" value="[% socio_modificar.persona.getNro_documento %]">
                       </div>
             </div>
 
