--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/showAyudaMarc.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/showAyudaMarc.tmpl
@@ -1,20 +1,43 @@
-[% PERL %]
-    print C4::AR::Filtros::tabbedPane( titulo   => "[% 'Ayuda MARC' | i18n %]",
-                             subtitulo          => "[% 'Navegue por las pesta&ntilde;as para acceder a las distintas ayudas' | i18n %]",
-                             content            => [  {id => 'ayudaLocal', text => "[% 'Ayuda MARC' | i18n %]" },
-                                                      {id => 'ayudaWeb', text=> "[% 'Ayuda MARC Web' | i18n %]" },
-                                                     
-                                                  ] ,
-                             active_id => 'ayudaLocal',
-    
-    );
+[% INCLUDE 'BootstrapToolkit.inc' %]
 
-[% END %]
-        <div class="tab-pane fade in active" id="ayudaLocal">
-            [% ayudaMarc %]
-        </div>
-        <div class="tab-pane fade" id="ayudaWeb">
-            [% ayudaMarc %]
-        </div>
+<div class="modal-header">
+    <a href="#" class="close" data-dismiss="modal">×</a>
+
+
+
+
+    [% PERL %]
+        print C4::AR::Filtros::tabbedPane( titulo   => "[% 'Ayuda MARC' | i18n %]",
+                                 subtitulo          => "[% 'Navegue por las pesta&ntilde;as para acceder a las distintas ayudas' | i18n %]",
+                                 content            => [  {id => 'ayudaLocal', text => "[% 'Ayuda MARC' | i18n %]" },
+                                                          {id => 'ayudaWeb', text=> "[% 'Definici&oacute;n MARC' | i18n %]" },
+                                                         
+                                                      ] ,
+                                 active_id => 'ayudaLocal',
+        
+        );
+
+    [% END %]
+
+
+
+</div>
+
+<div class="modal-body">    
+    
+    <div class="tab-pane fade in active" id="ayudaLocal">
+        [% IF ayudaMarc %]
+            [% ayudaMarc | i18n %]
+        [% ELSE %]
+            <div class="alert alert-info">[% "No se cargaron ayudas para este campo" | i18n %]</div>
+        [% END %]
     </div>
+    <div class="tab-pane fade" id="ayudaWeb">[% ayudaMarcWeb | i18n %]</div>
+   
+
+</div>
+
 </section>
+
+<div class="modal-footer">
+</div>
