--- a/dev-plugins/bootstrapless/intranet/default/propio.less
+++ b/dev-plugins/bootstrapless/intranet/default/propio.less
@@ -417,6 +417,12 @@ body {
     max-width: 500px;
 }
 
+.tipoDocImage img {
+    max-height: 48px;
+    max-width: 48px;
+}
+
+
 .table-striped tbody tr:nth-child(odd) td.marked,.table-striped tbody tr:nth-child(odd) th.marked{
     background-color: #DFF0E8;
 
